--- a/index3.html
+++ b/index3.html
@@ -3,10 +3,10 @@
 
 <head>
     <style>
-        div {
+        /* div {
             height: 20px;
             background-color: black
-        }
+        } */
 
         .speical.error {
             background-color: blue;
