--- a/index8.html
+++ b/index8.html
@@ -17,8 +17,11 @@
         <div class="row">
             <div class="col-xs-offset-4 col-xs-4">
 
-                <button id="mybtn" class="btn btn-primary btn-lg">동전던지기</button>
-                <img id="myImage" class="thumbnail" src="image/1.jpg" alt="">
+                <button id="mybtn" class="btn btn-primary btn-lg">🐱 동전던지기</button>
+                <div class="panel panel-primary">
+
+                    <img style="margin:auto;" id="myImage" class="thumbnail" src="image/1.jpg" alt="">
+                </div>
             </div>
         </div>
 
