--- a/index8.html
+++ b/index8.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
 
-    </style>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="col-xs-offset-4 col-xs-4">
 
-                <button id="mybtn" class="btn btn-primary btn-lg">🐱 동전던지기</button>
+                <button id="mybtn" class="btn btn-primary btn-lg"><i class="fas fa-fw fa-paw"></i> 동전던지기</button>
                 <div class="panel panel-primary">
 
                     <img style="margin:auto;" id="myImage" class="thumbnail" src="image/1.jpg" alt="">
