--- a/exercises/if-else-1.html
+++ b/exercises/if-else-1.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <input id="input1" type="number">
+    <input id="input1" value="0" type="number">
 
-    <input id="input2" type="number">
+    <input id="input2" value="0" type="number">
     <br>
     <button onclick="check();">확인</button>
     <p id="result"></p>
