w3schools try it

--- a/exercises/if-else-3.html
+++ b/exercises/if-else-3.html
@@ -19,6 +19,9 @@ function light(sw) {
 <button type="button" onclick="light(1)">Light On</button>
 <button type="button" onclick="light(0)">Light Off</button>
 </p>
-
+<p>
+    <a href="https://www.w3schools.com/html/tryit.asp?filename=tryhtml_script_attribute">
+    w3schools 예제</a>
+</p>
 </body>
 </html>
