--- a/for-1-solution.html
+++ b/for-1-solution.html
@@ -1,24 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
-    <textarea id="input1" rows="20" cols="30"></textarea>
+    <textarea id="input1" rows="20" cols="30">Peter Piper picked a peck of pickled peppers.A peck of pickled peppers Peter Piper picked.If Peter Piper picked a peck of pickled peppers,Where's the peck of pickled peppers Peter Piper picked?
+    </textarea>
     <br>
     <button onclick="check();" "button1">p는 몇 번?</button>
     <p id="result"></p>
 
     <script>
-    var text = "Peter Piper picked a peck of pickled peppers.A peck of pickled peppers Peter Piper picked.If Peter Piper picked a peck of pickled peppers,Where's the peck of pickled peppers Peter Piper picked?";
-    document.getElementById("input1").value = text;
-    function check() {
-        //완성해보세요.
-    }
+        function check() {
+            var text = document.getElementById("input1").value;
+            var count = 0;
+            text = text.toLowerCase();
+
+            for (var i = 0; i < text.length; i++) {
+                var c = text.charAt(i);
+                if (c === "p") {
+                    count++;
+                }
+            }
+
+            document.getElementById("result").innerHTML = 
+                "p는 총 " + count + "번 나왔습니다.";
+        }
+
 
     </script>
 </body>
+
 </html>
