--- a/for-3-solution.html
+++ b/for-3-solution.html
@@ -11,6 +11,8 @@
             font-size: 24px;
         }
         div {
+            display: inline-block;
+            border: 1px solid black;
             font-family: monospace;
         }
     </style>
@@ -18,9 +20,13 @@
 
 <body>
     <button id="button1" onclick="star1();">별 보여줘 1</button>
-    <div id="result1">
-
-    </div>
+    <button id="button2" onclick="star2();">별 보여줘2</button>
+    <button id="button3" onclick="star3();">별 보여줘3</button>
+    <button id="button4" onclick="star4();">별 보여줘4</button>
+    <div id="result1"></div>
+    <div id="result2"></div>
+    <div id="result3"></div>
+    <div id="result4"></div>
 
     <script>
         function star1() {
@@ -30,6 +36,40 @@
                 }
                 document.getElementById("result1").innerHTML += "<br>";
             }
+        }
+        function star4() {
+            for (var i = 0; i < 5; i++) {
+                for (var k = 0; k < (4-i); k++) {
+                    document.getElementById("result4").innerHTML += "&nbsp;";
+                }
+                for (var j = 0; j <= i; j++) {
+                    document.getElementById("result4").innerHTML += "*";
+                }
+                document.getElementById("result4").innerHTML += "<br>";
+            }
+        }
+        function star2() {
+            for (var i = 0; i < 5; i++) {
+                for (var j = 0; j < (5-i); j++) {
+                    document.getElementById("result2").innerHTML += "*";
+                }
+                document.getElementById("result2").innerHTML += "<br>";
+            }
+
+        }
+
+        function star3() {
+            for (var i = 0; i < 5; i++) {
+                for (var k = 0; k < i; k++) {
+                    document.getElementById("result3").innerHTML += "&nbsp;";
+                }
+
+                for (var j = 0; j < (5-i); j++) {
+                    document.getElementById("result3").innerHTML += "*";
+                }
+                document.getElementById("result3").innerHTML += "<br>";
+            }
+
         }
     </script>
 </body>
