randompick with name

--- a/randompick.html
+++ b/randompick.html
@@ -24,7 +24,7 @@
     <script>
         $(function () {
             var myIntervalFunction = function(b) {
-                    var randomNumber = Math.floor(Math.random() * 32) + 1;
+                    var randomNumber = Math.floor(Math.random() * 21) + 1;
                     // console.log(randomNumber);
                     var $panel = $("#panel" + randomNumber).removeClass("panel-default").addClass("panel-primary");
 
@@ -60,45 +60,91 @@
         <div class="row">
             <div class="col-xs-6">
                 <div class="col-xs-3">
+                    <div class="panel panel-default" id="">
+                        <div class="panel-heading text-center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+                    </div>
+                </div>
+                <div class="col-xs-3">
+                    <div class="panel panel-default" id="">
+                        <div class="panel-heading text-center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+                    </div>
+                </div>
+                <div class="col-xs-3">
                     <div class="panel panel-default" id="panel1">
-                        <div class="panel-heading text-center">유재석</div>
+                        <div class="panel-heading text-center">변성우</div>
                     </div>
                 </div>
                 <div class="col-xs-3">
-                    <div class="panel panel-default" id="panel2">
-                        <div class="panel-heading text-center">유재석</div>
-                    </div>
-                </div>
-                <div class="col-xs-3">
-                    <div class="panel panel-default" id="panel3">
-                        <div class="panel-heading text-center">유재석</div>
-                    </div>
-                </div>
-                <div class="col-xs-3">
-                    <div class="panel panel-default" id="panel4">
-                        <div class="panel-heading text-center">유재석</div>
+                    <div class="panel panel-default" id="">
+                        <div class="panel-heading text-center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
                     </div>
                 </div>
             </div>
             <div class="col-xs-6">
                 <div class="col-xs-3">
-                    <div class="panel panel-default" id="panel5">
-                        <div class="panel-heading text-center">유재석</div>
+                    <div class="panel panel-default" id="panel2">
+                        <div class="panel-heading text-center">김동운</div>
                     </div>
                 </div>
                 <div class="col-xs-3">
+                    <div class="panel panel-default" id="">
+                        <div class="panel-heading text-center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+                    </div>
+                </div>
+                <div class="col-xs-3">
+                    <div class="panel panel-default" id="panel3">
+                        <div class="panel-heading text-center">오승도</div>
+                    </div>
+                </div>
+                <div class="col-xs-3">
+                    <div class="panel panel-default" id="">
+                        <div class="panel-heading text-center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-6">
+                <div class="col-xs-3">
+                    <div class="panel panel-default" id="">
+                        <div class="panel-heading text-center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+                    </div>
+                </div>
+                <div class="col-xs-3">
+                    <div class="panel panel-default" id="">
+                        <div class="panel-heading text-center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+                    </div>
+                </div>
+                <div class="col-xs-3">
+                    <div class="panel panel-default" id="panel4">
+                        <div class="panel-heading text-center">주영원</div>
+                    </div>
+                </div>
+                <div class="col-xs-3">
+                    <div class="panel panel-default" id="panel5">
+                        <div class="panel-heading text-center">김환일</div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-6">
+                <div class="col-xs-3">
                     <div class="panel panel-default" id="panel6">
-                        <div class="panel-heading text-center">유재석</div>
+                        <div class="panel-heading text-center">박선형</div>
+                    </div>
+                </div>
+                <div class="col-xs-3">
+                    <div class="panel panel-default" id="">
+                        <div class="panel-heading text-center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
                     </div>
                 </div>
                 <div class="col-xs-3">
                     <div class="panel panel-default" id="panel7">
-                        <div class="panel-heading text-center">유재석</div>
+                        <div class="panel-heading text-center">허건</div>
                     </div>
                 </div>
                 <div class="col-xs-3">
                     <div class="panel panel-default" id="panel8">
-                        <div class="panel-heading text-center">유재석</div>
+                        <div class="panel-heading text-center">하상재</div>
                     </div>
                 </div>
             </div>
@@ -107,136 +153,90 @@
             <div class="col-xs-6">
                 <div class="col-xs-3">
                     <div class="panel panel-default" id="panel9">
-                        <div class="panel-heading text-center">유재석</div>
+                        <div class="panel-heading text-center">박현주</div>
+                    </div>
+                </div>
+                <div class="col-xs-3">
+                    <div class="panel panel-default" id="">
+                        <div class="panel-heading text-center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
                     </div>
                 </div>
                 <div class="col-xs-3">
                     <div class="panel panel-default" id="panel10">
-                        <div class="panel-heading text-center">유재석</div>
+                        <div class="panel-heading text-center">안수정</div>
                     </div>
                 </div>
                 <div class="col-xs-3">
                     <div class="panel panel-default" id="panel11">
-                        <div class="panel-heading text-center">유재석</div>
-                    </div>
-                </div>
-                <div class="col-xs-3">
-                    <div class="panel panel-default" id="panel12">
-                        <div class="panel-heading text-center">유재석</div>
+                        <div class="panel-heading text-center">서원</div>
                     </div>
                 </div>
             </div>
             <div class="col-xs-6">
                 <div class="col-xs-3">
+                    <div class="panel panel-default" id="panel12">
+                        <div class="panel-heading text-center">이태혁</div>
+                    </div>
+                </div>
+                <div class="col-xs-3">
                     <div class="panel panel-default" id="panel13">
-                        <div class="panel-heading text-center">유재석</div>
+                        <div class="panel-heading text-center">심재보</div>
                     </div>
                 </div>
                 <div class="col-xs-3">
                     <div class="panel panel-default" id="panel14">
-                        <div class="panel-heading text-center">유재석</div>
+                        <div class="panel-heading text-center">신승규</div>
                     </div>
                 </div>
                 <div class="col-xs-3">
                     <div class="panel panel-default" id="panel15">
-                        <div class="panel-heading text-center">유재석</div>
+                        <div class="panel-heading text-center">이신</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-6">
+                <div class="col-xs-3">
+                    <div class="panel panel-default" id="">
+                        <div class="panel-heading text-center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
                     </div>
                 </div>
                 <div class="col-xs-3">
                     <div class="panel panel-default" id="panel16">
-                        <div class="panel-heading text-center">유재석</div>
+                        <div class="panel-heading text-center">이진아</div>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-6">
                 <div class="col-xs-3">
                     <div class="panel panel-default" id="panel17">
-                        <div class="panel-heading text-center">유재석</div>
+                        <div class="panel-heading text-center">송재훈</div>
                     </div>
                 </div>
                 <div class="col-xs-3">
                     <div class="panel panel-default" id="panel18">
-                        <div class="panel-heading text-center">유재석</div>
+                        <div class="panel-heading text-center">김종현</div>
                     </div>
                 </div>
+            </div>
+            <div class="col-xs-6">
                 <div class="col-xs-3">
                     <div class="panel panel-default" id="panel19">
-                        <div class="panel-heading text-center">유재석</div>
+                        <div class="panel-heading text-center">김승일</div>
                     </div>
                 </div>
                 <div class="col-xs-3">
                     <div class="panel panel-default" id="panel20">
-                        <div class="panel-heading text-center">유재석</div>
+                        <div class="panel-heading text-center">최석환</div>
                     </div>
                 </div>
-            </div>
-            <div class="col-xs-6">
                 <div class="col-xs-3">
                     <div class="panel panel-default" id="panel21">
-                        <div class="panel-heading text-center">유재석</div>
+                        <div class="panel-heading text-center">이관희</div>
                     </div>
                 </div>
                 <div class="col-xs-3">
-                    <div class="panel panel-default" id="panel22">
-                        <div class="panel-heading text-center">유재석</div>
-                    </div>
-                </div>
-                <div class="col-xs-3">
-                    <div class="panel panel-default" id="panel23">
-                        <div class="panel-heading text-center">유재석</div>
-                    </div>
-                </div>
-                <div class="col-xs-3">
-                    <div class="panel panel-default" id="panel24">
-                        <div class="panel-heading text-center">유재석</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-6">
-                <div class="col-xs-3">
-                    <div class="panel panel-default" id="panel25">
-                        <div class="panel-heading text-center">유재석</div>
-                    </div>
-                </div>
-                <div class="col-xs-3">
-                    <div class="panel panel-default" id="panel26">
-                        <div class="panel-heading text-center">유재석</div>
-                    </div>
-                </div>
-                <div class="col-xs-3">
-                    <div class="panel panel-default" id="panel27">
-                        <div class="panel-heading text-center">유재석</div>
-                    </div>
-                </div>
-                <div class="col-xs-3">
-                    <div class="panel panel-default" id="panel28">
-                        <div class="panel-heading text-center">유재석</div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-6">
-                <div class="col-xs-3">
-                    <div class="panel panel-default" id="panel29">
-                        <div class="panel-heading text-center">유재석</div>
-                    </div>
-                </div>
-                <div class="col-xs-3">
-                    <div class="panel panel-default" id="panel30">
-                        <div class="panel-heading text-center">유재석</div>
-                    </div>
-                </div>
-                <div class="col-xs-3">
-                    <div class="panel panel-default" id="panel31">
-                        <div class="panel-heading text-center">유재석</div>
-                    </div>
-                </div>
-                <div class="col-xs-3">
-                    <div class="panel panel-default" id="panel32">
-                        <div class="panel-heading text-center">유재석</div>
+                    <div class="panel panel-default" id="">
+                        <div class="panel-heading text-center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
                     </div>
                 </div>
             </div>
